--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,5 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
+<h1>You are not logged in</h1>
+ <div class="row marketing">
   <h4>Firebase</h4>
   <p>
     Firebase is a powerful API to store and sync data in realtime.
